--- a/ai_front/tsconfig.json
+++ b/ai_front/tsconfig.json
@@ -1,3 +1,4 @@
+// AI_Kaihatsu/ai_front/tsconfig.json
 {
   "compilerOptions": {
     "target": "es5",
@@ -8,6 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
