--- a/ai_front/package.json
+++ b/ai_front/package.json
@@ -1,3 +1,4 @@
+// AI_Kaihatsu/ai_front/package.json
 {
   "name": "ai_front",
   "version": "1.0.0",
@@ -6,12 +7,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   }
 }
